# Task-Manager

./: .env.example  .gitignore  pyproject.toml  readme.md
task_manager/: settings.py  urls.py
task_manager/templates/task_manager/: index.html
tasks/: admin.py  models.py  serializers.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_alter_person_role_alter_task_status.py
tasks/static/css/: global.css  input.css  taskAdd.css  taskDetail.css  taskList.css
tasks/templates/persons/: index.html  personAdd.html  personDetail.html  personList.html
tasks/templates/tasks/: index.html  listTasks.html  taskAdd.html  taskDelete.html  taskDetail.html  taskList.html  taskUpdate.html
